# zoder

./: .gate.sh  .gitignore  .gitlab-ci.yml  Cargo.toml  Containerfile  README.md  ZODER_CLI_SURFACE.txt  config.enterprise.toml  config.ibm.toml  config.microsoft.toml  config.oracle.toml  deny.toml  install.sh  rust-toolchain.toml
.config/: nextest.toml
.github/: pull_request_template.md
.github/workflows/: container-weekly.yml  corpus-sync.yml  native-builds.yml  quality-gate.yml  release.yml
.gitlab/merge_request_templates/: Default.md
bench/: known-good-swe.json  overlay.json
corpus/: model_corpus.json
crates/acp-client/: Cargo.toml
crates/acp-client/src/: lib.rs  session_store.rs
crates/agent-descriptor/: Cargo.toml  README.md
crates/agent-descriptor/schema/: agent-descriptor.v1.schema.json  goose.descriptor.json  zoder.descriptor.json
crates/agent-descriptor/src/: consumer.rs  descriptor.rs  lib.rs  schema.rs  validate.rs
crates/agent-descriptor/tests/: integration.rs
crates/model-health/: Cargo.toml
crates/model-health/src/: lib.rs
crates/zoder-cli/: Cargo.toml
crates/zoder-cli/src/: agentic.rs  codex.rs  exec_safety.rs  goose.rs  jobs.rs  main.rs  sop.rs  utilization.rs
crates/zoder-core/: Cargo.toml  build.rs
crates/zoder-core/src/: budget.rs  catalog_models.rs  config.rs  consultant.rs  corpus.rs  engine_cost.rs  engine_rpc.rs  enterprise_cost.rs  finops.rs  gate.rs  gate_bundle.rs  health_probe.rs  ledger.rs  lib.rs  mcp.rs  policy.rs  pricing.rs  pricing_sync.rs  project_instructions.rs  provider.rs  quota.rs  reconcile.rs  report.rs  router.rs  scenarios.rs  session.rs  sop_graph.rs  subscription_tiers.rs  update.rs  utilization.rs
crates/zoder-core/tests/: catalog_models.rs  corpus.rs  install_script.rs  ledger.rs  policy.rs  pricing.rs  provider.rs  report.rs  session.rs  sop_graph.rs
crates/zoder-mcp-server/: Cargo.toml
crates/zoder-mcp-server/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  CI-PARITY-GATE.md  DAILY-BUILDS.md  HANDOFF-subscription-tier-presets.md  KNEMON.md  PROVIDER-ROUTING.md  RELIABILITY-AUDIT.md  VENDORING.md
docs/adr/: 0001-agent-descriptor-and-acp-posture.md  0002-zoder-codex-replacement-emulation.md
gate/: README.md  forges.yaml  gate.toml.example  stacks.yaml  zerocode-gate.py
gate/hooks/: pre-push
gitops/automation/: puller.sh  release.env.example
pricing/: catalog.json  peak-pricing.json
scripts/: build-bench-overlay.py  build-public-corpus.py  build.sh  ci-generate-cli-surface.sh  com.zoder.pricing-refresh.plist  corpus_match.py  daily-build.sh  fetch-aider-polyglot.py  fetch-arena.py  fetch-scale.py  fetch-terminal-bench.py  fetch-vals-swebench.py  install-smoke.sh  loop-gate.sh  package.sh  rsc_util.py
scripts/ci/: assert-trio-manifest.sh  ci-prepare-tools.sh  corpus-fetch-and-overlay.py  corpus-freshness-check.py  corpus-requirements.txt
scripts/tests/: ci-prepare-tools-tests.sh  cli-smoke.sh  corpus-freshness-tests.py  install-sh-tests.sh  trio-manifest-tests.sh
subscriptions/: tiers.json
zoder-plugin-cc/: README.md
zoder-plugin-cc/.claude-plugin/: marketplace.json
zoder-plugin-cc/plugins/zoder/.claude-plugin/: plugin.json
zoder-plugin-cc/plugins/zoder/agents/: zoder-rescue.md
zoder-plugin-cc/plugins/zoder/commands/: adversarial-review.md  cancel.md  exec.md  rescue.md  result.md  review.md  setup.md  status.md  transfer.md
zoder-plugin-cc/plugins/zoder/hooks/: hooks.json
zoder-plugin-cc/plugins/zoder/schemas/: review-output.schema.json
zoder-plugin-cc/plugins/zoder/scripts/: session-hook.mjs  zoder-companion.mjs
