[workspace]
resolver = "2"
members = ["crates/zoder-core", "crates/zoder-cli"]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
authors = ["ncz-os contributors"]
repository = "https://gitlab.com/ncz-os/zoder"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs", "time"] }
# rustls everywhere -> no per-target OpenSSL; clean cross-compilation.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dirs = "5"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"

# dev
wiremock = "0.6"
tempfile = "3"
url = "2"
