[package]
name = "acp-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Generic Agent Client Protocol (ACP) client: transport (Unix socket | spawned-stdio) + JSON-RPC framing + the zeroclaw-extended and standard (goose) ACP dialects. Engine-agnostic; no ncz-os/zoder coupling."

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "process", "io-util", "time", "rt", "macros", "sync"] }
# SIGKILL delivered to the whole process group (`kill(-pgid, SIGKILL)`) when
# reaping a spawned ACP engine (goose), so tool grandchildren the engine forked
# die with it instead of being reparented to init and leaking. The crate resolves
# the right per-platform `#[link]` (macOS libSystem etc.) where a raw `-lc` fails.
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["net", "process", "io-util", "time", "rt", "macros", "sync"] }
