[package]
name = "zoder-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "zoder: a fast, codex-compatible coding+review CLI that routes to free models with cost-aware, health-aware intelligence."

[[bin]]
name = "zoder"
path = "src/main.rs"

[dependencies]
zoder-core = { path = "../zoder-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures-util.workspace = true
clap.workspace = true
clap_complete.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
