[package]
name = "zoder-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "zoder: a fast, codex-compatible coding+review CLI that routes to free models with cost-aware, health-aware intelligence."

[[bin]]
name = "zoder"
path = "src/main.rs"

[dependencies]
zoder-core = { path = "../zoder-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures-util.workspace = true
clap.workspace = true
clap_complete.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs = "5"
fs2 = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
# Used by the reviewer-fallback-chain integration tests so the dispatcher
# can run against a real HTTP mock instead of being forced to mock out
# `reqwest::Client`. Wiremock is already a workspace dev-dep used by the
# `tests/provider.rs` integration tests in zoder-core.
wiremock.workspace = true
