[package]
name = "zoder-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "zoder: a fast, codex-compatible coding+review CLI that routes to free models with cost-aware, health-aware intelligence."

[[bin]]
name = "zoder"
path = "src/main.rs"

[dependencies]
zoder-core = { path = "../zoder-core" }
zoder-mcp-server = { path = "../zoder-mcp-server" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures-util.workspace = true
clap.workspace = true
clap_complete.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs = "5"
fs2 = "0.4"
reqwest = { workspace = true, features = ["blocking"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux-only: in-kernel Landlock ruleset, applied to the spawned child via
# a `pre_exec` hook (no external binary). The companion to bubblewrap on
# Linux: bubblewrap builds a new mount namespace from a userspace wrapper,
# Landlock is a kernel LSM and is applied IN-PROCESS to the child. See
# `crates/zoder-cli/src/exec_safety.rs::landlock_ruleset` for the ruleset
# generator. Gated on `target_os = "linux"` so the macOS build (and any
# other non-Linux host the loop may run on) doesn't pull the kernel-only
# crate into its dependency graph.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
tempfile = "3"
# Used by the reviewer-fallback-chain integration tests so the dispatcher
# can run against a real HTTP mock instead of being forced to mock out
# `reqwest::Client`. Wiremock is already a workspace dev-dep used by the
# `tests/provider.rs` integration tests in zoder-core.
wiremock.workspace = true
