[package]
name = "zoder-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core engine for zoder: cost-aware free-first model routing, health, policy gate, and spend ledger over any OpenAI-compatible/LiteLLM fleet."

[dependencies]
acp-client = { path = "../acp-client" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "process"] }
reqwest.workspace = true
futures-util.workspace = true
chrono.workspace = true
dirs.workspace = true
url.workspace = true
toml.workspace = true
tracing.workspace = true
rand.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
