[package]
name = "zoder-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "zoder MCP server: exposes zoder routing as a composable MCP tool."

[[bin]]
name = "zoder-mcp-server"
path = "src/main.rs"

[dependencies]
zoder-core = { path = "../zoder-core" }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true